# opennest

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
docs/: 00-architecture.md  01-recipe-standard.md  02-runtime-adapters.md  03-merge-guide.md  04-next-steps.md
docs/steam-warm-product/: DESIGN.md  app.js  index.html  styles.css
opennest-starter-v27/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
opennest-starter-v27/registry/: apps.json
opennest-starter-v27/scripts/: launch-openclaw-app.ps1  launch-opennest-desktop.ps1  validate-recipes.mjs  verify-starter.mjs
opennest-starter-v27/src/: App.tsx  i18n.tsx  index.css
opennest-starter-v27/src-tauri/: Cargo.toml  tauri.conf.json
opennest-starter-v27/src-tauri/capabilities/: default.json
opennest-starter-v27/src-tauri/src/: lib.rs  main.rs
opennest-starter-v27/src-tauri/src/recipe_runtime/: agent_container.rs  command_timeout.rs  commands.rs  docker_compose.rs  docker_status.rs  install_plan.rs  logs.rs  mcp_server.rs  mod.rs  native_cli.rs  node_runtime.rs  paths.rs  port_resolver.rs  preflight_gate.rs  process_manager.rs  recipe_loader.rs  resource_preflight.rs  rollback_adapter.rs  runtime_router.orig.rs  runtime_router.rs  secret_redaction_registry.rs  status.rs  status_store.rs  webview.rs
recipes/dify/: README.md
recipes/open-webui/: README.md
registry/: apps.json
scripts/: copy-into-opennest.ps1
snippets/: app-center-integration.tsx  cargo-dependencies.toml  my-library-integration.tsx  register-recipe-runtime-main.rs
(+90 files in other folders)
